# remote-apis-sdks

./: WORKSPACE
go/api/bazelbep/: BUILD.bazel  build_event_stream.proto  command_line.proto
go/api/buildeventstream/: BUILD.bazel  build_event_stream.proto
go/cmd/rexec/: BUILD.bazel  main.go
go/pkg/client/: BUILD.bazel  batch_retries_test.go  bes.go  bytestream.go  cas.go  cas_test.go  client.go  exec.go  retries_test.go
go/pkg/command/: BUILD.bazel  command.go
go/pkg/fakes/: cas.go  exec.go
go/pkg/flags/: flags.go
go/pkg/rexec/: BUILD.bazel  rexec.go  rexec_test.go
go/pkg/tool/: tool.go  tool_test.go
go/pkg/tree/: BUILD.bazel  tree.go  tree_test.go
